--- a/EloTracker/EloTracker/EloTracker.csproj
+++ b/EloTracker/EloTracker/EloTracker.csproj
@@ -76,6 +76,11 @@
     <Compile Include="Models\Player.cs" />
     <Compile Include="Serializers\GameSerializer.cs" />
     <Compile Include="Serializers\PlayerSerializer.cs" />
+    <Compile Include="Utilites\Serializer.cs" />
+    <Compile Include="Utilites\Utilities.cs" />
+    <Compile Include="ViewModel\AddGameVM.cs" />
+    <Compile Include="ViewModel\History.cs" />
+    <Compile Include="ViewModel\AddPlayerVM.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
